--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "editor-background-by-path",
 	"displayName": "Editor Background By Path",
 	"description": "Enables dynamic background image changes in the editor based on the file path of the active editor",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"publisher": "bartag",
 	"author": {
 		"email": "barta.gergo.64@gmail.com",
@@ -49,8 +49,7 @@
 			"properties": {
 				"editor_background_by_path.background_map": {
 					"type": "object",
-					"default": {
-					},
+					"default": {},
 					"description": "Mapping of file paths matches to specific keywords for background injection."
 				}
 			}
