--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": ""
+		"url": "https://github.com/BartaG512/editor-background-by-path.git/"
 	},
 	"bugs": {
-		"url": "https://github.com/BartaG512/editor-background-by-path.git"
+		"url": "https://github.com/BartaG512/editor-background-by-path.git/issues"
 	},
 	"preview": true,
 	"icon": "images/logo.png",
