Add synchronization without reload
Apply eslint rules

--- a/package.json
+++ b/package.json
@@ -87,8 +87,7 @@
 		}
 	},
 	"devDependencies": {
-		"eslint": "^8.21.0",
-		"eslint-config-prettier": "^8.5.0"
+		"eslint": "^8.57.1"
 	},
 	"dependencies": {
 		"file-url": "^3.0.0",
